# osc-wardrobe

./: README.md  console.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  Console.vue  console.ts  vue3-infinite-list.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/lua/: init.lua  main.lua
src-tauri/src/: application_event.rs  lib.rs  log_state.rs  lua.rs  main.rs  osc.rs  update.rs
src/assets/: style.css
src/composables/: useTheme.ts
