[package]
name = "osc-wardrobe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osc_wardrobe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vrchat_osc = "1.1"
tokio = { version = "1", features = ["full"] }
rosc = "~0.10"
tauri-plugin-log = "2"
mlua = { git = "https://github.com/called-d/mlua.git", branch = "jail", features = ["lua54", "vendored", "serialize", "async"] }
log = "0.4"
fs_extra = "1.3"
walkdir = "2.5.0"
notify-debouncer-mini = "0.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

