[package]
name = "osc-wardrobe"
version = "0.1.0-2"
description = "OSCQuery app with Lua scripting for change avatar"
authors = ["called_D"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osc_wardrobe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vrchat_osc = "1.1"
tokio = { version = "1", features = ["full"] }
rosc = "0.11.4"
tauri-plugin-log = "2"
mlua = { git = "https://github.com/called-d/mlua.git", branch = "jail", features = ["lua54", "vendored", "serialize", "async"] }
log = "0.4"
fs_extra = "1.3"
walkdir = "2.5.0"
notify-debouncer-mini = "0.6.0"
fern = { version = "0.7.1", features = ["chrono"] }
chrono = "0.4.41"
regex = "1.11.2"
semver = "1.0.27"
nyquest = { version = "0.3.1", features = ["async", "json"] }
nyquest-preset = { version = "0.3.0", features = ["async"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

